kubernetes/cyberchef/02-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  labels:
    app: cyberchef

spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: cyberchef
