kubernetes/cyberchef/04-ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cyberchef
  labels:
    app: cyberchef

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cc.zzd.ai`)
      kind: Rule
      services:
        - name: cyberchef
          port: 8000
  tls:
    certResolver: default
